--- a/#source/scss/content.scss
+++ b/#source/scss/content.scss
@@ -3,7 +3,7 @@
 	position: relative;
 	height: 100vh;
 	&__background {
-		background: url("../img/main/bg_2.jpg") center no-repeat;
+		background: url("../img/main/04.jpg") center no-repeat;
 		background-size: cover;
 		z-index: 1;
 		position: fixed;
@@ -14,32 +14,108 @@
 	}
 }
 
+// <OVERLAY>  ================================================
 .overlay {
 	z-index: 2;
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	top: 40%;
 	left: 0;
+	margin: 0px auto;
+	background-color: #fff;
 }
+
+// <MAIN-INFO>  ================================================
 .main-info {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: -60%;
+	left: 0;
 	z-index: 2;
-	height: 100vh;
 	text-align: center;
 	&__body {
-		color: #fff;
+		width: 750px;
+		margin: 0px auto;
+		color: rgb(48, 7, 41);
 		letter-spacing: 8px;
 	}
-
+	&__front {
+		padding: 25px 0px;
+		background-color: rgba(255, 255, 255, 0.678);
+		border-radius: 10px;
+	}
 	&__title {
 		margin: 0px 0px 30px 0px;
-		font-size: 60px;
+		font-size: 40px;
+		position: relative;
+		z-index: 2;
 	}
 
 	&__subtitle {
-		font-size: 30px;
+		font-size: 24px;
+		position: relative;
+		z-index: 2;
+	}
+	@media (max-width: 1050px) {
+		&__body {
+			letter-spacing: 4px;
+			width: 650px;
+		}
+	}
+	@media (max-width: 780px) {
+		&__body {
+			letter-spacing: 4px;
+			width: 500px;
+		}
+		&__title {
+			margin: 0px 0px 20px 0px;
+			font-size: 28px;
+		}
+		&__subtitle {
+			font-size: 20px;
+		}
+	}
+	@media (max-width: 550px) {
+		&__body {
+			letter-spacing: 2px;
+			width: 450px;
+		}
+	}
+	@media (max-width: 500px) {
+		&__body {
+			width: 360px;
+			letter-spacing: 1px;
+		}
+		&__title {
+			margin: 0px 0px 10px 0px;
+			font-size: 24px;
+		}
+		&__subtitle {
+			font-size: 16px;
+		}
+	}
+	@media (max-width: 395px) {
+		&__body {
+			width: 300px;
+			letter-spacing: 0px;
+		}
+		&__title {
+			margin: 0px 0px 10px 0px;
+			font-size: 22px;
+		}
 	}
 }
+
+// <DESCRIPTION>  ================================================
 .description {
-	background-color: #fff;
+	margin: 50px 0px;
+	text-align: center;
+	&__text {
+		font-size: 22px;
+		line-height: 38px;
+	}
+	@media (max-width: 900px) {
+		margin: 30px 0px;
+	}
 }
