--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 @charset "UTF-8";
 /*Обнуление*/
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,600;0,700;1,500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bellota+Text:wght@400;700&display=swap");
 * {
   padding: 0;
   margin: 0;
@@ -65,6 +67,9 @@ body {
   body._lock {
     overflow: hidden; }
 
+body {
+  font-family: "Montserrat", sans-serif; }
+
 .wrapper {
   width: 100%;
   min-height: 100%;
@@ -85,13 +90,13 @@ body {
 .container {
   max-width: 1130px;
   margin: 0px auto;
-  padding: 0px 15px; }
+  padding: 0px 10px; }
 
 .main {
   position: relative;
   height: 100vh; }
   .main__background {
-    background: url("../img/main/bg_2.jpg") center no-repeat;
+    background: url("../img/main/04.jpg") center no-repeat;
     background-size: cover;
     z-index: 1;
     position: fixed;
@@ -105,21 +110,76 @@ body {
   position: absolute;
   width: 100%;
   height: 100%;
-  top: 40%;
-  left: 0; }
+  left: 0;
+  margin: 0px auto;
+  background-color: #fff; }
 
 .main-info {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: -60%;
+  left: 0;
   z-index: 2;
-  height: 100vh;
   text-align: center; }
   .main-info__body {
-    color: #fff;
+    width: 750px;
+    margin: 0px auto;
+    color: #300729;
     letter-spacing: 8px; }
+  .main-info__front {
+    padding: 25px 0px;
+    background-color: rgba(255, 255, 255, 0.678);
+    border-radius: 10px; }
   .main-info__title {
     margin: 0px 0px 30px 0px;
-    font-size: 60px; }
+    font-size: 40px;
+    position: relative;
+    z-index: 2; }
   .main-info__subtitle {
-    font-size: 30px; }
+    font-size: 24px;
+    position: relative;
+    z-index: 2; }
+  @media (max-width: 1050px) {
+    .main-info__body {
+      letter-spacing: 4px;
+      width: 650px; } }
+  @media (max-width: 780px) {
+    .main-info__body {
+      letter-spacing: 4px;
+      width: 500px; }
+    .main-info__title {
+      margin: 0px 0px 20px 0px;
+      font-size: 28px; }
+    .main-info__subtitle {
+      font-size: 20px; } }
+  @media (max-width: 550px) {
+    .main-info__body {
+      letter-spacing: 2px;
+      width: 450px; } }
+  @media (max-width: 500px) {
+    .main-info__body {
+      width: 360px;
+      letter-spacing: 1px; }
+    .main-info__title {
+      margin: 0px 0px 10px 0px;
+      font-size: 24px; }
+    .main-info__subtitle {
+      font-size: 16px; } }
+  @media (max-width: 395px) {
+    .main-info__body {
+      width: 300px;
+      letter-spacing: 0px; }
+    .main-info__title {
+      margin: 0px 0px 10px 0px;
+      font-size: 22px; } }
 
 .description {
-  background-color: #fff; }
+  margin: 50px 0px;
+  text-align: center; }
+  .description__text {
+    font-size: 22px;
+    line-height: 38px; }
+  @media (max-width: 900px) {
+    .description {
+      margin: 30px 0px; } }
