--- a/#source/scss/content.scss
+++ b/#source/scss/content.scss
@@ -109,13 +109,36 @@
 
 // <DESCRIPTION>  ================================================
 .description {
-	margin: 50px 0px;
+	position: relative;
+	z-index: 2;
+	padding: 50px 0px;
 	text-align: center;
+	color: #000;
 	&__text {
 		font-size: 22px;
 		line-height: 38px;
+		& p:last-child {
+			padding: 15px 0px 0px 0px;
+		}
+		& a {
+			color: rgb(224, 165, 0);
+			position: relative;
+			&:after {
+				content: "";
+				transition: all 0.3s ease 0s;
+				position: absolute;
+				width: 100%;
+				height: 0.5px;
+				bottom: -1px;
+				left: 0;
+				background-color: rgb(224, 165, 0);
+			}
+			&:hover:after {
+				opacity: 0;
+			}
+		}
 	}
 	@media (max-width: 900px) {
-		margin: 30px 0px;
+		padding: 30px 0px;
 	}
 }
