--- a/css/style.css
+++ b/css/style.css
@@ -175,11 +175,32 @@ body {
       font-size: 22px; } }
 
 .description {
-  margin: 50px 0px;
-  text-align: center; }
+  position: relative;
+  z-index: 2;
+  padding: 50px 0px;
+  text-align: center;
+  color: #000; }
   .description__text {
     font-size: 22px;
     line-height: 38px; }
+    .description__text p:last-child {
+      padding: 15px 0px 0px 0px; }
+    .description__text a {
+      color: #e0a500;
+      position: relative; }
+      .description__text a:after {
+        content: "";
+        -webkit-transition: all 0.3s ease 0s;
+        -o-transition: all 0.3s ease 0s;
+        transition: all 0.3s ease 0s;
+        position: absolute;
+        width: 100%;
+        height: 0.5px;
+        bottom: -1px;
+        left: 0;
+        background-color: #e0a500; }
+      .description__text a:hover:after {
+        opacity: 0; }
   @media (max-width: 900px) {
     .description {
-      margin: 30px 0px; } }
+      padding: 30px 0px; } }
