--- a/#source/scss/content.scss
+++ b/#source/scss/content.scss
@@ -19,7 +19,8 @@
 	z-index: 2;
 	position: absolute;
 	width: 100%;
-	height: 100%;
+	height: auto;
+	//top: 100vh;
 	left: 0;
 	margin: 0px auto;
 	background-color: #fff;
@@ -30,9 +31,9 @@
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	top: -60%;
+	top: -45%;
 	left: 0;
-	z-index: 2;
+	z-index: 32;
 	text-align: center;
 	&__body {
 		width: 750px;
@@ -114,6 +115,15 @@
 	padding: 50px 0px;
 	text-align: center;
 	color: #000;
+	&:after {
+		content: "";
+		position: absolute;
+		width: 100%;
+		height: 100px;
+		bottom: 0;
+		left: 0;
+		box-shadow: 0px 30px 30px #fff;
+	}
 	&__text {
 		font-size: 22px;
 		line-height: 38px;
@@ -140,5 +150,177 @@
 	}
 	@media (max-width: 900px) {
 		padding: 30px 0px;
+	}
+}
+
+// <HISTORY>  ================================================
+.history {
+	padding: 50px 0px;
+	background-color: #000;
+	background: url("../img/history/floral.jpg") 0 0 no-repeat;
+	background-size: cover;
+
+	&__head {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+	}
+
+	&__body {
+		margin: 90px 0px 0px 0px;
+		text-align: center;
+		position: relative;
+	}
+
+	&__slider {
+		display: flex;
+	}
+
+	&__slide {
+		flex: 0 1 100%;
+		display: flex;
+		justify-content: center;
+	}
+	&__image {
+		flex: 0 1 600px;
+		& img {
+			max-width: 100%;
+		}
+	}
+
+	&__prev {
+		-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+		cursor: pointer;
+		position: absolute;
+		z-index: 3;
+		width: 100%;
+		top: 50%;
+		left: -40%;
+		background: url("../img/history/left-arrow.svg") center no-repeat;
+		height: 50px;
+		transform: translate(0, -50%);
+		opacity: 0.8;
+	}
+
+	&__next {
+		-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+		cursor: pointer;
+		background: url("../img/history/right-arrow.svg") center no-repeat;
+		height: 50px;
+		position: absolute;
+		z-index: 3;
+		width: 100%;
+		top: 50%;
+		right: -40%;
+		transform: translate(0, -50%);
+		opacity: 0.8;
+	}
+	@media (max-width: 970px) {
+		&__body {
+			margin: 60px 0px 0px 0px;
+		}
+		&__prev {
+			left: -45%;
+		}
+		&__next {
+			right: -45%;
+		}
+	}
+	@media (max-width: 795px) {
+		padding: 30px 0px;
+		&__body {
+			margin: 50px 0px 0px 0px;
+		}
+		&__image {
+			flex: 0 1 400px;
+		}
+	}
+	@media (max-width: 570px) {
+		&__image {
+			flex: 0 1 300px;
+		}
+	}
+	@media (max-width: 500px) {
+		&__body {
+			margin: 40px 0px 0px 0px;
+		}
+		&__prev {
+			height: 35px;
+		}
+		&__next {
+			height: 35px;
+		}
+	}
+	@media (max-width: 430px) {
+		&__image {
+			flex: 0 1 250px;
+		}
+		&__body {
+			margin: 30px 0px 0px 0px;
+		}
+	}
+	@media (max-width: 370px) {
+		&__image {
+			flex: 0 1 200px;
+		}
+	}
+}
+
+.head {
+	letter-spacing: 4px;
+	&__title {
+		color: rgb(0, 0, 0);
+		font-size: 36px;
+		border-radius: 3px;
+	}
+
+	&__image {
+		margin: 20px 0px;
+		position: relative;
+		&:before {
+			content: "";
+			position: absolute;
+			width: 60px;
+			height: 1px;
+			top: 50%;
+			left: 150%;
+			background-color: #000;
+			border-radius: 50%;
+			transform: translate(0, -50%);
+		}
+		&:after {
+			content: "";
+			position: absolute;
+			width: 60px;
+			height: 1px;
+			top: 50%;
+			right: 150%;
+			background-color: #000;
+			border-radius: 50%;
+			transform: translate(0, -50%);
+		}
+	}
+
+	&__img {
+	}
+
+	&__subtitle {
+		font-size: 22px;
+		text-align: center;
+	}
+	@media (max-width: 570px) {
+		letter-spacing: 2px;
+	}
+	@media (max-width: 500px) {
+		letter-spacing: 1px;
+		&__image {
+			margin: 10px 0px;
+		}
+	}
+	@media (max-width: 430px) {
+		&__subtitle {
+			line-height: 26px;
+		}
 	}
 }
