--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,9 @@ body {
 body {
   font-family: "Montserrat", sans-serif; }
 
+a {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
+
 .wrapper {
   width: 100%;
   min-height: 100%;
@@ -109,7 +112,7 @@ body {
   z-index: 2;
   position: absolute;
   width: 100%;
-  height: 100%;
+  height: auto;
   left: 0;
   margin: 0px auto;
   background-color: #fff; }
@@ -118,9 +121,9 @@ body {
   position: absolute;
   width: 100%;
   height: 100%;
-  top: -60%;
+  top: -45%;
   left: 0;
-  z-index: 2;
+  z-index: 32;
   text-align: center; }
   .main-info__body {
     width: 750px;
@@ -180,6 +183,15 @@ body {
   padding: 50px 0px;
   text-align: center;
   color: #000; }
+  .description:after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100px;
+    bottom: 0;
+    left: 0;
+    -webkit-box-shadow: 0px 30px 30px #fff;
+    box-shadow: 0px 30px 30px #fff; }
   .description__text {
     font-size: 22px;
     line-height: 38px; }
@@ -204,3 +216,163 @@ body {
   @media (max-width: 900px) {
     .description {
       padding: 30px 0px; } }
+
+.history {
+  padding: 50px 0px;
+  background-color: #000;
+  background: url("../img/history/floral.jpg") 0 0 no-repeat;
+  background-size: cover; }
+  .history__head {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center; }
+  .history__body {
+    margin: 90px 0px 0px 0px;
+    text-align: center;
+    position: relative; }
+  .history__slider {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
+  .history__slide {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 1 100%;
+    flex: 0 1 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center; }
+  .history__image {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 1 600px;
+    flex: 0 1 600px; }
+    .history__image img {
+      max-width: 100%; }
+  .history__prev {
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    cursor: pointer;
+    position: absolute;
+    z-index: 3;
+    width: 100%;
+    top: 50%;
+    left: -40%;
+    background: url("../img/history/left-arrow.svg") center no-repeat;
+    height: 50px;
+    -webkit-transform: translate(0, -50%);
+    -ms-transform: translate(0, -50%);
+    transform: translate(0, -50%);
+    opacity: 0.8; }
+  .history__next {
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    cursor: pointer;
+    background: url("../img/history/right-arrow.svg") center no-repeat;
+    height: 50px;
+    position: absolute;
+    z-index: 3;
+    width: 100%;
+    top: 50%;
+    right: -40%;
+    -webkit-transform: translate(0, -50%);
+    -ms-transform: translate(0, -50%);
+    transform: translate(0, -50%);
+    opacity: 0.8; }
+  @media (max-width: 970px) {
+    .history__body {
+      margin: 60px 0px 0px 0px; }
+    .history__prev {
+      left: -45%; }
+    .history__next {
+      right: -45%; } }
+  @media (max-width: 795px) {
+    .history {
+      padding: 30px 0px; }
+      .history__body {
+        margin: 50px 0px 0px 0px; }
+      .history__image {
+        -webkit-box-flex: 0;
+        -ms-flex: 0 1 400px;
+        flex: 0 1 400px; } }
+  @media (max-width: 570px) {
+    .history__image {
+      -webkit-box-flex: 0;
+      -ms-flex: 0 1 300px;
+      flex: 0 1 300px; } }
+  @media (max-width: 500px) {
+    .history__body {
+      margin: 40px 0px 0px 0px; }
+    .history__prev {
+      height: 35px; }
+    .history__next {
+      height: 35px; } }
+  @media (max-width: 430px) {
+    .history__image {
+      -webkit-box-flex: 0;
+      -ms-flex: 0 1 250px;
+      flex: 0 1 250px; }
+    .history__body {
+      margin: 30px 0px 0px 0px; } }
+  @media (max-width: 370px) {
+    .history__image {
+      -webkit-box-flex: 0;
+      -ms-flex: 0 1 200px;
+      flex: 0 1 200px; } }
+
+.head {
+  letter-spacing: 4px; }
+  .head__title {
+    color: black;
+    font-size: 36px;
+    border-radius: 3px; }
+  .head__image {
+    margin: 20px 0px;
+    position: relative; }
+    .head__image:before {
+      content: "";
+      position: absolute;
+      width: 60px;
+      height: 1px;
+      top: 50%;
+      left: 150%;
+      background-color: #000;
+      border-radius: 50%;
+      -webkit-transform: translate(0, -50%);
+      -ms-transform: translate(0, -50%);
+      transform: translate(0, -50%); }
+    .head__image:after {
+      content: "";
+      position: absolute;
+      width: 60px;
+      height: 1px;
+      top: 50%;
+      right: 150%;
+      background-color: #000;
+      border-radius: 50%;
+      -webkit-transform: translate(0, -50%);
+      -ms-transform: translate(0, -50%);
+      transform: translate(0, -50%); }
+  .head__subtitle {
+    font-size: 22px;
+    text-align: center; }
+  @media (max-width: 570px) {
+    .head {
+      letter-spacing: 2px; } }
+  @media (max-width: 500px) {
+    .head {
+      letter-spacing: 1px; }
+      .head__image {
+        margin: 10px 0px; } }
+  @media (max-width: 430px) {
+    .head__subtitle {
+      line-height: 26px; } }
