--- a/#source/scss/content.scss
+++ b/#source/scss/content.scss
@@ -30,11 +30,14 @@
 .main-info {
 	position: absolute;
 	width: 100%;
-	height: 100%;
-	top: -45%;
+	height: 100vh;
+	top: 0;
 	left: 0;
 	z-index: 32;
 	text-align: center;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 	&__body {
 		width: 750px;
 		margin: 0px auto;
