--- a/css/style.css
+++ b/css/style.css
@@ -120,11 +120,20 @@ a {
 .main-info {
   position: absolute;
   width: 100%;
-  height: 100%;
-  top: -45%;
+  height: 100vh;
+  top: 0;
   left: 0;
   z-index: 32;
-  text-align: center; }
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center; }
   .main-info__body {
     width: 750px;
     margin: 0px auto;
