--- a/#source/scss/content.scss
+++ b/#source/scss/content.scss
@@ -164,10 +164,6 @@
 	background-size: cover;
 
 	&__head {
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		justify-content: center;
 	}
 
 	&__body {
@@ -270,8 +266,13 @@
 	}
 }
 
+// <HEAD>  ================================================
 .head {
 	letter-spacing: 4px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 	&__title {
 		color: rgb(0, 0, 0);
 		font-size: 36px;
@@ -325,5 +326,77 @@
 		&__subtitle {
 			line-height: 26px;
 		}
+	}
+}
+
+// <EVENTS>  ================================================
+.events {
+	padding: 50px 0px;
+	position: relative;
+	&:before {
+		content: "";
+		position: absolute;
+		width: 100%;
+		height: 100px;
+		top: 14px;
+		left: 0;
+		box-shadow: 0px 40px 15px #fff;
+		transform: rotate(180deg);
+	}
+	&__head {
+	}
+
+	&__body {
+	}
+
+	&__day {
+	}
+}
+.day {
+	margin: 60px 0px 0px 0px;
+	letter-spacing: 3px;
+	&__title {
+		text-align: center;
+		font-size: 21px;
+	}
+
+	&__wrap {
+		margin: 40px 0px 0px 0px;
+	}
+
+	&__wrapper {
+		display: flex;
+		align-items: center;
+		&_2 {
+			margin: 30px 0px;
+			justify-content: flex-end;
+		}
+	}
+
+	&__column {
+		margin: 0px 25px;
+		&_img {
+			flex: 0 1 150px;
+		}
+	}
+	&__image {
+		& img {
+			max-width: 100%;
+		}
+	}
+
+	&__label {
+		font-size: 20px;
+		text-align: center;
+		margin: 0px 0px 35px 0px;
+	}
+
+	&__time {
+		font-size: 16px;
+	}
+
+	&__adress {
+		margin: 12px 0px 0px 0px;
+		font-size: 16px;
 	}
 }
