--- a/css/style.css
+++ b/css/style.css
@@ -231,20 +231,6 @@ a {
   background-color: #000;
   background: url("../img/history/floral.jpg") 0 0 no-repeat;
   background-size: cover; }
-  .history__head {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center; }
   .history__body {
     margin: 90px 0px 0px 0px;
     text-align: center;
@@ -339,7 +325,20 @@ a {
       flex: 0 1 200px; } }
 
 .head {
-  letter-spacing: 4px; }
+  letter-spacing: 4px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center; }
   .head__title {
     color: black;
     font-size: 36px;
@@ -385,3 +384,57 @@ a {
   @media (max-width: 430px) {
     .head__subtitle {
       line-height: 26px; } }
+
+.events {
+  padding: 50px 0px;
+  position: relative; }
+  .events:before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100px;
+    top: 14px;
+    left: 0;
+    -webkit-box-shadow: 0px 40px 15px #fff;
+    box-shadow: 0px 40px 15px #fff;
+    -webkit-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    transform: rotate(180deg); }
+
+.day {
+  margin: 60px 0px 0px 0px;
+  letter-spacing: 3px; }
+  .day__title {
+    text-align: center;
+    font-size: 21px; }
+  .day__wrap {
+    margin: 40px 0px 0px 0px; }
+  .day__wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center; }
+    .day__wrapper_2 {
+      margin: 30px 0px;
+      -webkit-box-pack: end;
+      -ms-flex-pack: end;
+      justify-content: flex-end; }
+  .day__column {
+    margin: 0px 25px; }
+    .day__column_img {
+      -webkit-box-flex: 0;
+      -ms-flex: 0 1 150px;
+      flex: 0 1 150px; }
+  .day__image img {
+    max-width: 100%; }
+  .day__label {
+    font-size: 20px;
+    text-align: center;
+    margin: 0px 0px 35px 0px; }
+  .day__time {
+    font-size: 16px; }
+  .day__adress {
+    margin: 12px 0px 0px 0px;
+    font-size: 16px; }
