--- a/css/style.css
+++ b/css/style.css
@@ -228,7 +228,6 @@ a {
 
 .history {
   padding: 50px 0px;
-  background-color: #000;
   background: url("../img/history/floral.jpg") 0 0 no-repeat;
   background-size: cover; }
   .history__body {
@@ -325,6 +324,9 @@ a {
       flex: 0 1 200px; } }
 
 .head {
+  padding: 7px 0px;
+  position: relative;
+  z-index: 2;
   letter-spacing: 4px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -339,13 +341,30 @@ a {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center; }
+  .head span {
+    content: "";
+    position: absolute;
+    z-index: 1;
+    width: 50%;
+    height: 100%;
+    top: 0;
+    left: 50%;
+    border-radius: 10px;
+    -webkit-box-shadow: 0px 20px 80px white inset;
+    box-shadow: 0px 20px 80px white inset;
+    -webkit-transform: translate(-50%, 0);
+    -ms-transform: translate(-50%, 0);
+    transform: translate(-50%, 0); }
   .head__title {
     color: black;
     font-size: 36px;
-    border-radius: 3px; }
+    border-radius: 3px;
+    position: relative;
+    z-index: 2; }
   .head__image {
     margin: 20px 0px;
-    position: relative; }
+    position: relative;
+    z-index: 2; }
     .head__image:before {
       content: "";
       position: absolute;
@@ -371,14 +390,24 @@ a {
       -ms-transform: translate(0, -50%);
       transform: translate(0, -50%); }
   .head__subtitle {
+    position: relative;
+    z-index: 2;
     font-size: 22px;
     text-align: center; }
+  @media (max-width: 1058px) {
+    .head span {
+      width: 70%; } }
+  @media (max-width: 765px) {
+    .head span {
+      width: 90%; } }
   @media (max-width: 570px) {
     .head {
       letter-spacing: 2px; } }
   @media (max-width: 500px) {
     .head {
       letter-spacing: 1px; }
+      .head span {
+        width: 100%; }
       .head__image {
         margin: 10px 0px; } }
   @media (max-width: 430px) {
