--- a/#source/scss/content.scss
+++ b/#source/scss/content.scss
@@ -226,7 +226,7 @@
 		}
 	}
 	@media (max-width: 795px) {
-		padding: 30px 0px;
+		padding: 30px 0px 50px 0px;
 		&__body {
 			margin: 50px 0px 0px 0px;
 		}
