--- a/css/style.css
+++ b/css/style.css
@@ -226,10 +226,14 @@ a {
     .description {
       padding: 30px 0px; } }
 
-.history {
-  padding: 50px 0px;
+.background {
   background: url("../img/history/floral.jpg") 0 0 no-repeat;
   background-size: cover; }
+
+.history {
+  padding: 50px 0px;
+  /*background: url("../img/history/floral.jpg") 0 0 no-repeat;
+	background-size: cover;*/ }
   .history__body {
     margin: 90px 0px 0px 0px;
     text-align: center;
@@ -415,27 +419,23 @@ a {
       line-height: 26px; } }
 
 .events {
-  padding: 50px 0px;
-  position: relative; }
-  .events:before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100px;
-    top: 14px;
-    left: 0;
-    -webkit-box-shadow: 0px 40px 15px #fff;
-    box-shadow: 0px 40px 15px #fff;
-    -webkit-transform: rotate(180deg);
-    -ms-transform: rotate(180deg);
-    transform: rotate(180deg); }
+  position: relative;
+  padding: 50px 0px; }
+  .events__background {
+    padding: 50px 20px;
+    border-radius: 50px;
+    background-color: #fff;
+    -webkit-box-shadow: 0px 0px 30px rgba(70, 2, 66, 0.301);
+    box-shadow: 0px 0px 30px rgba(70, 2, 66, 0.301); }
 
 .day {
   margin: 60px 0px 0px 0px;
   letter-spacing: 3px; }
   .day__title {
+    font-style: oblique;
     text-align: center;
-    font-size: 21px; }
+    font-size: 21px;
+    font-weight: 700; }
   .day__wrap {
     margin: 40px 0px 0px 0px; }
   .day__wrapper {
@@ -446,7 +446,7 @@ a {
     -ms-flex-align: center;
     align-items: center; }
     .day__wrapper_2 {
-      margin: 30px 0px;
+      margin: 30px 0px 0px 0px;
       -webkit-box-pack: end;
       -ms-flex-pack: end;
       justify-content: flex-end; }
@@ -454,14 +454,26 @@ a {
     margin: 0px 25px; }
     .day__column_img {
       -webkit-box-flex: 0;
-      -ms-flex: 0 1 150px;
-      flex: 0 1 150px; }
+      -ms-flex: 0 1 130px;
+      flex: 0 1 130px; }
   .day__image img {
     max-width: 100%; }
   .day__label {
     font-size: 20px;
     text-align: center;
-    margin: 0px 0px 35px 0px; }
+    margin: 0px 0px 35px 0px;
+    position: relative; }
+    .day__label:after {
+      content: "";
+      position: absolute;
+      width: 20%;
+      height: 0.2px;
+      bottom: -5px;
+      left: 50%;
+      background-color: #000;
+      -webkit-transform: translate(-50%, 0);
+      -ms-transform: translate(-50%, 0);
+      transform: translate(-50%, 0); }
   .day__time {
     font-size: 16px; }
   .day__adress {
