--- a/#source/scss/content.scss
+++ b/#source/scss/content.scss
@@ -389,6 +389,10 @@
 	margin: 60px 0px 0px 0px;
 	letter-spacing: 3px;
 	&__title {
+		padding: 2px 0px;
+		background: linear-gradient(45deg, #2b0728 33%, #61084e 66%, #6e3968);
+		-webkit-background-clip: text;
+		-webkit-text-fill-color: transparent;
 		font-style: oblique;
 		text-align: center;
 		font-size: 21px;
@@ -411,7 +415,7 @@
 	&__column {
 		margin: 0px 25px;
 		&_img {
-			flex: 0 1 130px;
+			flex: 0 1 120px;
 		}
 	}
 	&__image {
@@ -421,20 +425,24 @@
 	}
 
 	&__label {
-		font-size: 20px;
-		text-align: center;
-		margin: 0px 0px 35px 0px;
+		font-size: 18px;
+		text-transform: uppercase;
+		margin: 0px 0px 20px 0px;
 		position: relative;
-		&:after {
+		display: inline-block;
+		box-shadow: 6px 5px 5px 1px #8d30844d;
+		padding: 3px;
+		border-radius: 7px;
+		/*&:after {
 			content: "";
 			position: absolute;
-			width: 20%;
-			height: 0.2px;
-			bottom: -5px;
-			left: 50%;
+			width: 100%;
+			height: 0.9px;
+			bottom: 0px;
+			left: 0;
 			background-color: #000;
-			transform: translate(-50%, 0);
-		}
+			transform: translate(0, 5px);
+		}*/
 	}
 
 	&__time {
@@ -444,5 +452,23 @@
 	&__adress {
 		margin: 12px 0px 0px 0px;
 		font-size: 16px;
+	}
+	@media (max-width: 900px) {
+		&__column {
+			margin: 0px 20px;
+			&_img {
+				flex: 0 1 90px;
+			}
+		}
+		&__label {
+			&:after {
+				height: 0.5px;
+			}
+		}
+		&__wrapper {
+			&_2 {
+				margin: 40px 0px 0px 0px;
+			}
+		}
 	}
 }
