--- a/css/style.css
+++ b/css/style.css
@@ -432,6 +432,12 @@ a {
   margin: 60px 0px 0px 0px;
   letter-spacing: 3px; }
   .day__title {
+    padding: 2px 0px;
+    background: -webkit-linear-gradient(45deg, #2b0728 33%, #61084e 66%, #6e3968);
+    background: -o-linear-gradient(45deg, #2b0728 33%, #61084e 66%, #6e3968);
+    background: linear-gradient(45deg, #2b0728 33%, #61084e 66%, #6e3968);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
     font-style: oblique;
     text-align: center;
     font-size: 21px;
@@ -454,28 +460,43 @@ a {
     margin: 0px 25px; }
     .day__column_img {
       -webkit-box-flex: 0;
-      -ms-flex: 0 1 130px;
-      flex: 0 1 130px; }
+      -ms-flex: 0 1 120px;
+      flex: 0 1 120px; }
   .day__image img {
     max-width: 100%; }
   .day__label {
-    font-size: 20px;
-    text-align: center;
-    margin: 0px 0px 35px 0px;
-    position: relative; }
-    .day__label:after {
-      content: "";
-      position: absolute;
-      width: 20%;
-      height: 0.2px;
-      bottom: -5px;
-      left: 50%;
-      background-color: #000;
-      -webkit-transform: translate(-50%, 0);
-      -ms-transform: translate(-50%, 0);
-      transform: translate(-50%, 0); }
+    font-size: 18px;
+    text-transform: uppercase;
+    margin: 0px 0px 20px 0px;
+    position: relative;
+    display: inline-block;
+    -webkit-box-shadow: 6px 5px 5px 1px #8d30844d;
+    box-shadow: 6px 5px 5px 1px #8d30844d;
+    padding: 3px;
+    border-radius: 7px;
+    /*&:after {
+			content: "";
+			position: absolute;
+			width: 100%;
+			height: 0.9px;
+			bottom: 0px;
+			left: 0;
+			background-color: #000;
+			transform: translate(0, 5px);
+		}*/ }
   .day__time {
     font-size: 16px; }
   .day__adress {
     margin: 12px 0px 0px 0px;
     font-size: 16px; }
+  @media (max-width: 900px) {
+    .day__column {
+      margin: 0px 20px; }
+      .day__column_img {
+        -webkit-box-flex: 0;
+        -ms-flex: 0 1 90px;
+        flex: 0 1 90px; }
+    .day__label:after {
+      height: 0.5px; }
+    .day__wrapper_2 {
+      margin: 40px 0px 0px 0px; } }
