--- a/#source/scss/content.scss
+++ b/#source/scss/content.scss
@@ -60,6 +60,9 @@
 		font-size: 24px;
 		position: relative;
 		z-index: 2;
+		&_town {
+			padding: 30px 0px 0px 0px;
+		}
 	}
 	@media (max-width: 1050px) {
 		&__body {
@@ -78,6 +81,9 @@
 		}
 		&__subtitle {
 			font-size: 20px;
+			&_town {
+				padding: 20px 0px 0px 0px;
+			}
 		}
 	}
 	@media (max-width: 550px) {
@@ -97,6 +103,9 @@
 		}
 		&__subtitle {
 			font-size: 16px;
+			&_town {
+				padding: 10px 0px 0px 0px;
+			}
 		}
 	}
 	@media (max-width: 395px) {
@@ -406,16 +415,18 @@
 	&__wrapper {
 		display: flex;
 		align-items: center;
+		margin: 50px 0px 0px 0px;
 		&_2 {
-			margin: 30px 0px 0px 0px;
+			//margin: 40px 0px 0px 0px;
 			justify-content: flex-end;
 		}
 	}
 
 	&__column {
-		margin: 0px 25px;
+		margin: 0px 15px;
+		flex: 0 0 50%;
 		&_img {
-			flex: 0 1 120px;
+			flex: 0 0 105px;
 		}
 	}
 	&__image {
@@ -425,33 +436,56 @@
 	}
 
 	&__label {
-		font-size: 18px;
+		color: #fff;
+		font-size: 16px;
 		text-transform: uppercase;
 		margin: 0px 0px 20px 0px;
 		position: relative;
 		display: inline-block;
-		box-shadow: 6px 5px 5px 1px #8d30844d;
-		padding: 3px;
-		border-radius: 7px;
-		/*&:after {
+		//box-shadow: 9px 8px 10px 1px #8d30844d;
+		padding: 4px 10px;
+		border-radius: 3px;
+		& p {
+			position: relative;
+			z-index: 30;
+		}
+		& span {
 			content: "";
 			position: absolute;
+			z-index: 1;
 			width: 100%;
-			height: 0.9px;
-			bottom: 0px;
+			height: 100%;
+			top: 0;
 			left: 0;
-			background-color: #000;
-			transform: translate(0, 5px);
-		}*/
+			background-color: #72135f8f;
+			border-radius: 3px;
+		}
 	}
 
-	&__time {
+	&__time,
+	&__adress,
+	&__text {
 		font-size: 16px;
 	}
-
+	&__text {
+		position: relative;
+		display: block;
+		margin: 15px 0px 0px 0px;
+		padding: 0px 0px 0px 13px;
+		line-height: 26px;
+		&:before {
+			content: "";
+			position: absolute;
+			width: 5px;
+			height: 100%;
+			top: 0;
+			left: 0;
+			border-radius: 5px;
+			background-color: #72135f52;
+		}
+	}
 	&__adress {
 		margin: 12px 0px 0px 0px;
-		font-size: 16px;
 	}
 	@media (max-width: 900px) {
 		&__column {
