--- a/css/style.css
+++ b/css/style.css
@@ -152,6 +152,8 @@ a {
     font-size: 24px;
     position: relative;
     z-index: 2; }
+    .main-info__subtitle_town {
+      padding: 30px 0px 0px 0px; }
   @media (max-width: 1050px) {
     .main-info__body {
       letter-spacing: 4px;
@@ -164,7 +166,9 @@ a {
       margin: 0px 0px 20px 0px;
       font-size: 28px; }
     .main-info__subtitle {
-      font-size: 20px; } }
+      font-size: 20px; }
+      .main-info__subtitle_town {
+        padding: 20px 0px 0px 0px; } }
   @media (max-width: 550px) {
     .main-info__body {
       letter-spacing: 2px;
@@ -177,7 +181,9 @@ a {
       margin: 0px 0px 10px 0px;
       font-size: 24px; }
     .main-info__subtitle {
-      font-size: 16px; } }
+      font-size: 16px; }
+      .main-info__subtitle_town {
+        padding: 10px 0px 0px 0px; } }
   @media (max-width: 395px) {
     .main-info__body {
       width: 300px;
@@ -450,45 +456,64 @@ a {
     display: flex;
     -webkit-box-align: center;
     -ms-flex-align: center;
-    align-items: center; }
+    align-items: center;
+    margin: 50px 0px 0px 0px; }
     .day__wrapper_2 {
-      margin: 30px 0px 0px 0px;
       -webkit-box-pack: end;
       -ms-flex-pack: end;
       justify-content: flex-end; }
   .day__column {
-    margin: 0px 25px; }
+    margin: 0px 15px;
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 50%;
+    flex: 0 0 50%; }
     .day__column_img {
       -webkit-box-flex: 0;
-      -ms-flex: 0 1 120px;
-      flex: 0 1 120px; }
+      -ms-flex: 0 0 105px;
+      flex: 0 0 105px; }
   .day__image img {
     max-width: 100%; }
   .day__label {
-    font-size: 18px;
+    color: #fff;
+    font-size: 16px;
     text-transform: uppercase;
     margin: 0px 0px 20px 0px;
     position: relative;
     display: inline-block;
-    -webkit-box-shadow: 6px 5px 5px 1px #8d30844d;
-    box-shadow: 6px 5px 5px 1px #8d30844d;
-    padding: 3px;
-    border-radius: 7px;
-    /*&:after {
-			content: "";
-			position: absolute;
-			width: 100%;
-			height: 0.9px;
-			bottom: 0px;
-			left: 0;
-			background-color: #000;
-			transform: translate(0, 5px);
-		}*/ }
-  .day__time {
+    padding: 4px 10px;
+    border-radius: 3px; }
+    .day__label p {
+      position: relative;
+      z-index: 30; }
+    .day__label span {
+      content: "";
+      position: absolute;
+      z-index: 1;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      background-color: #72135f8f;
+      border-radius: 3px; }
+  .day__time, .day__adress, .day__text {
     font-size: 16px; }
+  .day__text {
+    position: relative;
+    display: block;
+    margin: 15px 0px 0px 0px;
+    padding: 0px 0px 0px 13px;
+    line-height: 26px; }
+    .day__text:before {
+      content: "";
+      position: absolute;
+      width: 5px;
+      height: 100%;
+      top: 0;
+      left: 0;
+      border-radius: 5px;
+      background-color: #72135f52; }
   .day__adress {
-    margin: 12px 0px 0px 0px;
-    font-size: 16px; }
+    margin: 12px 0px 0px 0px; }
   @media (max-width: 900px) {
     .day__column {
       margin: 0px 20px; }
